--- a/.github/workflows/Babihostlogin.yml
+++ b/.github/workflows/Babihostlogin.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.11'   
 
       - name: Cache pip dependencies
         uses: actions/cache@v3
@@ -30,21 +30,25 @@ jobs:
       - name: Install dependencies
         run: |
           python -m venv venv
-          source venv/bin/activate
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          venv/bin/pip install --upgrade pip
+          venv/bin/pip install -r requirements.txt
+
+      - name: Install Chrome
+        uses: browser-actions/setup-chrome@v1
+        with:
+          chrome-version: stable
 
       - name: Create Report Directory
         run: mkdir -p reports/assets
 
       - name: Run Babihost Login
         run: |
-          source venv/bin/activate
-          pytest --html=reports/BabihostLogin \
+          venv/bin/python -m pytest \
+            --html=reports/BabihostLogin.html \
             -k "TestBabihostLogin" \
             --css=reports/assets/style.css
         env:
-          DISPLAY: :99.0
+          DISPLAY: :99
 
       - name: Upload Report
         if: always()
