--- a/.github/workflows/Babihostlogin.yml
+++ b/.github/workflows/Babihostlogin.yml
@@ -56,3 +56,13 @@ jobs:
         with:
           name: BabihostLogin-Report
           path: reports
+
+      - name: Install Chrome and ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget unzip xvfb libxi6 libgconf-2-4
+          sudo apt-get install -y google-chrome-stable || true
+          wget -N https://chromedriver.storage.googleapis.com/$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip -d /usr/local/bin/
+          rm chromedriver_linux64.zip
+
