--- a/.github/workflows/Babihostlogin.yml
+++ b/.github/workflows/Babihostlogin.yml
@@ -11,22 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.13'
 
+      # Step 3: Cache pip dependencies    
       - name: Cache pip dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
 
+      # Step 4: Install dependencies          
       - name: Install dependencies
         run: |
           python -m venv venv
@@ -34,18 +38,21 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Create Report Directory
+      # Step 5: Create Reports Directory
+      - name: Create Report
         run: mkdir -p reports/assets
 
-      - name: Run Babihost Login
+      # Step 6: Run Tests
+      - name: Run Babihost Login 
         run: |
           source venv/bin/activate
           pytest --html=reports/BabihostLogin \
             -k "TestBabihostLogin" \
             --css=reports/assets/style.css
         env:
-          DISPLAY: :99.0
+          DISPLAY: :99.0    # Required for headless browser testing
 
+      # Step 7: Upload Test Reports as Artifacts    
       - name: Upload Report
         if: always()
         uses: actions/upload-artifact@v4
