--- a/.github/workflows/Forgotpassword.yml
+++ b/.github/workflows/Forgotpassword.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run Forgot Password Test
         run: |
           source venv/bin/activate
-          pytest tests/functional/forgot_password.py --html=reports/ForgotPassword \
+          pytest --html=reports/ForgotPassword \
             -k "TestForgotPassword" \
             --css=reports/assets/style.css
         env:
