--- a/.github/workflows/Forgotpassword.yml
+++ b/.github/workflows/Forgotpassword.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           source venv/bin/activate
           pytest --html=reports/ForgotPassword \
-            -k "TestForgotPassword" \
+            -k "TestBabihostForgotPassword" \
             --css=reports/assets/style.css
         env:
           DISPLAY: :99.0    # Required for headless browser testing
